Fix some small overlap in TV overlay

--- a/src/app/styl/show_detail.styl
+++ b/src/app/styl/show_detail.styl
@@ -61,7 +61,6 @@
   -webkit-background-size cover
   -moz-background-size cover
   background-size cover
-  margin -1px
   display none
 
 .tv-poster-overlay
